# bengaluru-housing-mlops

./: Makefile  README.md  pyproject.toml
bengaluru_housing/: __init__.py  dataset.py  features.py  plots.py
bengaluru_housing/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
